# bin

./: .gitignore  CMakeLists.txt  Notebook1.cpp  Notebook2.cpp  README.md  buildheapmoreopti  countthesubarraymaxelementappearatleastktimes  lenthoflongestsubarraywithatmostk  linkedlist.cpp  mergeksortedarr  mergesort.cpp  smallestrangecoveringelformklists  sqrt.cpp  welcome.cpp  zerosumsubarray
AVLTree/: deletion.cpp
BST/: Maximum Sum BST in Binary Tree.cpp  arraytobst.cpp  checkfotbst.cpp  checkwhetherBSTcontainsDeadEnds.cpp  commonnodesinBST.cpp  constructBStfrompre.cpp  kthlargestel.cpp  lowestcommonancestor.cpp
Basics/: Find_2ndmax.cpp  Missing_no.cpp  binary_to_decimal.cpp  bishop_move.cpp  convert_capital_to_smaller.cpp  decimal_to_binary.cpp  fibonachi_series.cpp  reactangle.cpp  rotate_by_1.cpp  sqrt.cpp
Binary_Search/: Aggressive_Cows.cpp  KoKo_Eating_Banana.cpp  Peak_Index.cpp  Search_Inert_Positions.cpp  Ship_packages.cpp  painter_allocation.cpp  search_in_a_rotated_array.cpp  sqrt.cpp
C++/: 4.median-of-two-sorted-arrays.cpp  CMakeLists.txt  README.md  Reverselinkedlist.cpp  armstrong.cpp  constructtargetarraymulsum  duplicateprint.cpp  levelordertraversalinspiral.cpp  quicksort.cpp  subarraywithkdiffints  welcome
C++/AVLTree/: insertion.cpp
C++/BST/: Largest BST in Binary Tree.cpp  MergetwoBST.cpp  canrepresentintree.cpp  constructfrompost.cpp  createBST.cpp  deleteinBST.cpp  fixtwonodesofBST.cpp  inordersucessor.cpp  insertanode.cpp  kthsmallest.cpp  searchnodeinBST.cpp  sortedLLtoBST.cpp  sumofksmallest.cpp
C++/Backtracking/: McoloringBruteforce.cpp  Mcoloringoptimized.cpp  NQueenBruteForce.cpp  NQueenoptimized.cpp  Sudokusolver.cpp
C++/Basics/: Add_digits.cpp  Leap_Year.cpp  Reverse_Digits.cpp  armstrong_no.cpp  compliment_of_a_no.cpp  linear_search.cpp  nim_game.cpp  pallindrome.cpp  power_of_2.cpp  reverse_array.cpp
C++/Binary_Search/: Book_Allocation.cpp  Find_Element.cpp  Find_Minimum_Rotated_array.cpp  First_and_Last_Position_Target.cpp  kth_missing_positive_Integer.cpp  split_array_in_largest_sum.cpp
C++/Dequeue/: dequeueimplell.cpp  minimumnumberofk.cpp  slidingwindowmaximum.cpp
C++/Doubly-linked-list/: Dbl.cpp  insertindbl.cpp
C++/Dynamic_programing/: 0 - 1 Knapsack Problem.cpp  Number_of_Unique_Paths.cpp  Phone_Directory.cpp  Unique_Paths_in_a_grid.cpp  best_time_to_buy_and_sell_stock_2.cpp  best_time_to_buy_and_sell_stock_III.cpp  coins_change.cpp  (+23 more)
Dequeue/: queueusingdeque.cpp  stackusingdeque.cpp
Doubly-linked-list/: Deleteanypos.cpp
Heap/: BSTTomaxHeap.cpp  Merge K sorted linked lists.cpp  findmedianinastream.cpp  isBTHeap.cpp  kthelementinamatrix.cpp  kthsmallestnumber.cpp  smallestrangecoveringelformklists.cpp
Matrix/: Binary_search_in_2D.cpp  Rotate_matrix_90_anticlock.cpp  Transpose_of_matrix.cpp  print_matrix_colm_wise.cpp  print_sum_of_diagonal.cpp  printing_of_diagonal.cpp  reverse_each_row_of_matrix.cpp  rotate_matrix_90.cpp  spiral_form.cpp
OOPS/: Destructor.cpp  object.cpp
Prefix_and_Suffix/: Foursum_Problem.cpp  Trapping_rain_water_problem.cpp  kadane_Algorithm.cpp  largest_sum_contigous.cpp
SlidingWindow/: NumberofsubarrayshavingsumlessthanK.cpp  lenthoflongestsubarraywithatmostk.cpp  minimumsizesubarraysum.cpp  minimumwindowsubstring.cpp  subarrayproductslessthank.cpp  subarraywithkdiffints.cpp
Tree/: DinagonalTraversal.cpp  Treeimple.cpp  bottomviewBT.cpp  boundarytraversal.cpp  burningtree.cpp  checkforbalancedtree.cpp  constructtree1.cpp  counttheleafs.cpp  identicaltrees.cpp  mirrortree.cpp  rightviewofBST.cpp  sizeoftree.cpp  sumofBST.cpp  topviewBT.cpp  traversal(iterative).cpp  traversal(recursive).cpp
Two_Pointer/: pair_with_given_difference.cpp  segregate_0_and_1.cpp
graphs/: Alien_Dictionary.cpp  Articulation_Points.cpp  Bellman_ford.cpp  Course_Schedule_BFS.cpp  Course_Schedule_DFS.cpp  DijkstraAlgorithm_Dense_graph.cpp  DijkstraAlgorithm_sparse_Graph.cpp  Eulerpath_or_Circuit_or_not.cpp  Prims_Algorithm.cpp  ShortestSourcetoDestinationPath.cpp  X_Total_Shapes.cpp  bridge_in_a_graph.cpp  detect_Bipartite_graph_using_BFS.cpp  graphimplementationsadjlist.cpp  graphtraversalDFSrecursion.cpp  parallel_course.cpp  prerequisite_task_BFS(KahnAlgo).cpp  prerequisite_task_DFS.cpp  return_path_of_theshortest_path_in_undirected_graph.cpp  shortest_path_in_directed_graph.cpp  shortest_path_in_undirected_graph.cpp  shortest_path_in_weighted_undirected_grpah.cpp  strongly_connected_components(TarjanAlgo).cpp  strongly_connected_components(kosaraju Algo).cpp  topologicalsort_BFS(KahnAlgorithm).cpp
linked-list/: 237.delete-node-in-a-linked-list.cpp  Merge-k-sorted.cpp  clone-a-linkedlist.cpp  deleteandremoveloop.cpp  detectloop.cpp  flatteringlinkedlist.cpp  intersectioninyshaped.cpp  middle-element.cpp  removeduplicate.cpp  removenthnodefromend.cpp  reverselinkedlist.cpp
pointers/: 2darraypointers.cpp  3darraypointer  3darraypointer.cpp  pointersincpp
queue/: fnrciasoc.cpp  prinall.cpp  queueimplearr.cpp  queueimplementationll.cpp
recursion/: Nbitbinarynumber.cpp  arrayrecursion  binarysearch.cpp  countvowel  countvowel.cpp  factorial  factorial.cpp  gcdoftwo  lowercasetoupper  mergesort  minelementarr  nthstairs.cpp  perfectsums.cpp  permutationduplicate.cpp  powerof2n.cpp  quicksort  ratinmaze.cpp  reversestring.cpp  stringsubseuence  subsequence  sumofsquareofn  sumonnatural.cpp  sumsetsum.cpp  targetsums.cpp  waystosumn.cpp
sorting/: bubble_sort.cpp  insertion_sorting.cpp  selection_sort.cpp
stack/: Nextgreater.cpp  celebrityprob.cpp  getminatpop.cpp  getminimum.cpp  implementtwostack.cpp  insertatbottom.cpp  largestrectangleinhisto.cpp  makearraybeautiful.cpp  maximumofmininevsize.cpp  minimumaddvalidp.cpp  nextsmallestl.cpp  printbracketnumber.cpp  stackimple.cpp
strings/: circularpattern  intoroman  longestkchar.cpp  longestprefixsuffix  longestprefixsuffix.cpp  repeatedstring  slidingwindowlsubwrc.cpp  smallestdistinct  smallestwindow  stringmatching  stringmatching.cpp  stringpallindrome  stringpallindrome.cpp
tools/: convert_to_test.cpp  converttotest.cpp  converttotest.h
(+171 files in other folders)
