cmake_minimum_required(VERSION 3.31.6)
project(codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(codes
        AVLTree/deletion.cpp
        AVLTree/insertion.cpp
        BST/arraytobst.cpp
        BST/canrepresentintree.cpp
        BST/checkfotbst.cpp
        BST/checkwhetherBSTcontainsDeadEnds.cpp
        BST/commonnodesinBST.cpp
        BST/constructBStfrompre.cpp
        BST/constructfrompost.cpp
        BST/createBST.cpp
        BST/deleteinBST.cpp
        BST/fixtwonodesofBST.cpp
        BST/inordersucessor.cpp
        BST/insertanode.cpp
        BST/kthlargestel.cpp
        BST/kthsmallest.cpp
        "BST/Largest BST in Binary Tree.cpp"
        BST/lowestcommonancestor.cpp
        "BST/Maximum Sum BST in Binary Tree.cpp"
        BST/MergetwoBST.cpp
        BST/searchnodeinBST.cpp
        BST/sortedLLtoBST.cpp
        BST/sumofksmallest.cpp
        Dequeue/dequeueimplell.cpp
        Dequeue/minimumnumberofk.cpp
        Dequeue/queueusingdeque.cpp
        Dequeue/slidingwindowmaximum.cpp
        Dequeue/stackusingdeque.cpp
        Doubly-linked-list/Dbl.cpp
        Doubly-linked-list/Deleteanypos.cpp
        Doubly-linked-list/insertindbl.cpp
        Heap/Maxheap/buildheapmoreopti.cpp
        Heap/Maxheap/buildheapopti.cpp
        Heap/Maxheap/buildmaxheap.cpp
        Heap/Maxheap/Heapsort.cpp
        Heap/MinHeap/buildMinheap.cpp
        linked-list/237.delete-node-in-a-linked-list.cpp
        linked-list/Add2Number.cpp
        linked-list/checkpalindrome.cpp
        linked-list/clone-a-linkedlist.cpp
        linked-list/deleteandremoveloop.cpp
        linked-list/deletion.cpp
        linked-list/detectloop.cpp
        linked-list/flatteringlinkedlist.cpp
        linked-list/insertion.cpp
        linked-list/intersectioninyshaped.cpp
        linked-list/lengthofloop.cpp
        linked-list/Merge-k-sorted.cpp
        linked-list/mergetwosorted.cpp
        linked-list/middle-element.cpp
        linked-list/removeduplicate.cpp
        linked-list/removekthnode.cpp
        linked-list/removenthnodefromend.cpp
        linked-list/reverselinkedingroup.cpp
        linked-list/reverselinkedlist.cpp
        linked-list/rotatelist.cpp
        linked-list/sortlist.cpp
        OOPS/Inheritance/hierarchiral.cpp
        OOPS/Inheritance/multilevel.cpp
        OOPS/Inheritance/multiple.cpp
        OOPS/Inheritance/singleinheritance.cpp
        OOPS/constructor.cpp
        OOPS/Destructor.cpp
        OOPS/object.cpp
        OOPS/staticdatamember.cpp
        pointers/2darraypointers.cpp
        pointers/3darraypointer.cpp
        pointers/pointersincpp.cpp
        queue/firstnegativeinteveryein.cpp
        queue/fnrciasoc.cpp
        queue/implementqueueusingstack.cpp
        queue/implementstackuqueue.cpp
        queue/prinall.cpp
        queue/printallnumbersinwindow.cpp
        queue/queueimplearr.cpp
        queue/queueimplementationll.cpp
        queue/queuereversal.cpp
        queue/reversefirstkel.cpp
        queue/totaltimetobyticket.cpp
        recursion/arrayrecursion.cpp
        recursion/basicrecursion.cpp
        recursion/binarysearch.cpp
        recursion/checkpallindrome.cpp
        recursion/countvowel.cpp
        recursion/factorial.cpp
        recursion/fibonachi.cpp
        recursion/gcdoftwo.cpp
        recursion/generateparenthesis.cpp
        recursion/hello.cpp
        recursion/josephusproblem.cpp
        recursion/linearsearch.cpp
        recursion/lowercasetoupper.cpp
        recursion/mergesort.cpp
        recursion/minelementarr.cpp
        recursion/Nbitbinarynumber.cpp
        recursion/nthstairs.cpp
        recursion/perfectsums.cpp
        recursion/permutation.cpp
        recursion/permutationduplicate.cpp
        recursion/powerof2n.cpp
        recursion/quicksort.cpp
        recursion/ratinmaze.cpp
        recursion/recursionb.cpp
        recursion/reversestring.cpp
        recursion/stringsubseuence.cpp
        recursion/subsequence.cpp
        recursion/sumofallele.cpp
        recursion/sumofsquareofn.cpp
        recursion/sumonnatural.cpp
        recursion/sumsetsum.cpp
        recursion/targetsums.cpp
        recursion/tempCodeRunnerFile.cpp
        recursion/towerofhanoi.cpp
        recursion/validparenthesis.cpp
        recursion/waystosumn.cpp
        stack/backgroundcheck.cpp
        stack/celebrityprob.cpp
        stack/getminatpop.cpp
        stack/getminimum.cpp
        stack/implementtwostack.cpp
        stack/insertatbottom.cpp
        stack/largestrectangleinhisto.cpp
        stack/makearraybeautiful.cpp
        stack/maximalrectanle.cpp
        stack/maximumofmininevsize.cpp
        stack/minimumaddvalidp.cpp
        stack/minimumaxiews.cpp
        stack/Nextgreater.cpp
        stack/nextgreaterl.cpp
        stack/nextgreaterrot.cpp
        stack/nextsmaller.cpp
        stack/nextsmallestl.cpp
        stack/parenthesisvalid.cpp
        stack/printbracketnumber.cpp
        stack/reversearray.cpp
        stack/stackimple.cpp
        stack/stackimplelist.cpp
        stack/stockspan.cpp
        stack/stringmanupulation.cpp
        stl/stlincpp.cpp
        strings/addstring.cpp
        strings/circularpattern.cpp
        strings/factorial.cpp
        strings/intoroman.cpp
        strings/longestkchar.cpp
        strings/longestprefixsuffix.cpp
        strings/repeatedstring.cpp
        strings/romantoint.cpp
        strings/slidingwindowlsubwrc.cpp
        strings/smallestdistinct.cpp
        strings/smallestwindow.cpp
        strings/stringmatching.cpp
        strings/stringpallindrome.cpp
        Tree/bottomviewBT.cpp
        Tree/boundarytraversal.cpp
        Tree/BTtoDLL.cpp
        Tree/burningtree.cpp
        Tree/check2nodescousin.cpp
        Tree/checkforbalancedtree.cpp
        Tree/constructtree1.cpp
        Tree/constructtreein&post.cpp
        Tree/constructtreein&pre.cpp
        Tree/counttheleafs.cpp
        Tree/countthenonleaf.cpp
        Tree/DinagonalTraversal.cpp
        Tree/flattenbinarytolinked.cpp
        Tree/identicaltrees.cpp
        Tree/largetsvalueeachlevel.cpp
        Tree/leftviewofBST.cpp
        Tree/levelordertraversalinspiral.cpp
        Tree/maxpathsum.cpp
        Tree/mirrortree.cpp
        Tree/morristraversal.cpp
        Tree/postorder.cpp
        Tree/preorder.cpp
        Tree/rightviewofBST.cpp
        Tree/sizeoftree.cpp
        Tree/sumofBST.cpp
        Tree/topviewBT.cpp
        "Tree/traversal(iterative).cpp"
        "Tree/traversal(recursive).cpp"
        Tree/Treeimple.cpp
        Tree/verticaltraversalBT.cpp
        15.3-sum.cpp
        195.tenth-line.cpp
        4.median-of-two-sorted-arrays.cpp
        armstrong.cpp
        duplicateprint.cpp
        levelordertraversalinspiral.cpp
        linkedlist.cpp
        mergesort.cpp
        Notebook1.cpp
        Notebook2.cpp
        quicksort.cpp
        Reverselinkedlist.cpp
        sqrt.cpp
        welcome.cpp
        "Heap/Merge K sorted linked lists.cpp"
        Heap/mergeksortedarr.cpp
        Heap/smallestrangecoveringelformklists.cpp
        Heap/constructtargetarraymulsum.cpp
        SlidingWindow/zerosumsubarray.cpp
        SlidingWindow/sumofsubarrayqualstok.cpp
        SlidingWindow/subarraysumsdivsbyk.cpp
        SlidingWindow/subarrayproductslessthank.cpp
        SlidingWindow/minimumsizesubarraysum.cpp
        SlidingWindow/minimumwindowsubstring.cpp
        SlidingWindow/lenthoflongestsubarraywithatmostk.cpp
        SlidingWindow/countthesubarraymaxelementappearatleastktimes.cpp
        SlidingWindow/subarraywithkdiffints.cpp
        SlidingWindow/NumberofsubarrayshavingsumlessthanK.cpp
        graphs/graphimplementations.cpp
        graphs/graphimplementationsadjlist.cpp
        graphs/graphtraversalBFS.cpp
        graphs/graphtraversalDFSrecursion.cpp
        graphs/graphtraversalDFSstack.cpp
        graphs/detect_cycle_in_undirected_graph_using_DFS.cpp
        graphs/detect_cycle_in_undirected_graph_using_BFS.cpp
        graphs/topologicalsort_DFS.cpp
        "graphs/topologicalsort_BFS(KahnAlgorithm).cpp"
        graphs/detect_cycle_in_DG_DFS.cpp
        graphs/detect_cycle_in_DG_BFS.cpp
        graphs/detect_Bipartite_graph_using_BFS.cpp
        graphs/detect_Bipartite_graph_using_DFS.cpp
        graphs/covidspread.cpp
        graphs/find_the_number_of_islands.cpp
        graphs/Replace_Os_with_x.cpp
        graphs/rottenoranges.cpp
        graphs/X_Total_Shapes.cpp
        graphs/Number_of_province.cpp
        "graphs/prerequisite_task_BFS(KahnAlgo).cpp"
        graphs/prerequisite_task_DFS.cpp
        graphs/Course_Schedule_BFS.cpp
        graphs/Course_Schedule_DFS.cpp
        graphs/Alien_Dictionary.cpp
        graphs/parallel_course.cpp
        graphs/shortest_path_in_undirected_graph.cpp
        graphs/return_path_of_theshortest_path_in_undirected_graph.cpp
        graphs/shortest_path_in_directed_graph.cpp
        graphs/DijkstraAlgorithm_Dense_graph.cpp
        graphs/DijkstraAlgorithm_sparse_Graph.cpp
        graphs/shortest_path_in_weighted_undirected_grpah.cpp
        graphs/Bellman_ford.cpp
        graphs/Floyd_Warshall.cpp
        graphs/knightwalk.cpp
        graphs/ShortestSourcetoDestinationPath.cpp
        graphs/find_the_path_Exist_DFS.cpp
        graphs/Eulerpath_or_Circuit_or_not.cpp
        graphs/circle_of_strings.cpp
        graphs/Prims_Algorithm.cpp
        tools/converttotest.cpp
        tools/converttotest.h
        graphs/kruskal_algorithm.cpp
        Basics/decimal_to_binary.cpp
        Basics/binary_to_decimal.cpp
        Basics/Add_digits.cpp
        Basics/Leap_Year.cpp
        Basics/Reverse_Digits.cpp
        Basics/power_of_2.cpp
        Basics/sqrt.cpp
        Basics/pallindrome.cpp
        Basics/compliment_of_a_no.cpp
        Basics/convert_capital_to_smaller.cpp
        Basics/armstrong_no.cpp
        Basics/reactangle.cpp
        Basics/bishop_move.cpp
        Basics/nim_game.cpp
        Basics/linear_search.cpp
        Basics/reverse_array.cpp
        Basics/Find_2ndmax.cpp
        Basics/Missing_no.cpp
        Basics/fibonachi_series.cpp
        Basics/rotate_by_1.cpp
        sorting/insertion_sorting.cpp
        sorting/bubble_sort.cpp
        sorting/selection_sort.cpp
        Binary_Search/Find_Element.cpp
        Binary_Search/First_and_Last_Position_Target.cpp
        Binary_Search/Search_Inert_Positions.cpp
        Binary_Search/sqrt.cpp
        Binary_Search/Peak_Index.cpp
        Binary_Search/Find_Minimum_Rotated_array.cpp
        Binary_Search/search_in_a_rotated_array.cpp
        Binary_Search/kth_missing_positive_Integer.cpp
        Binary_Search/Book_Allocation.cpp
        Binary_Search/painter_allocation.cpp
        Binary_Search/Ship_packages.cpp
        Binary_Search/split_array_in_largest_sum.cpp
        Binary_Search/Aggressive_Cows.cpp
        Binary_Search/KoKo_Eating_Banana.cpp)
